packages/slider/src/slider.css
/*
Copyright 2020 Adobe. All rights reserved.
This file is licensed to you under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License. You may obtain a copy
of the License at http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under
the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
OF ANY KIND, either express or implied. See the License for the specific language
governing permissions and limitations under the License.
*/

@import './spectrum-slider.css';

:host {
    --spectrum-slider-handle-default-background-color: var(
        --spectrum-slider-m-handle-background-color,
        var(--spectrum-alias-background-color-transparent)
    );
    --spectrum-slider-handle-default-border-color: var(
        --spectrum-slider-m-handle-border-color,
        var(--spectrum-global-color-gray-700)
    );
}

sp-field-label {
    padding-top: 0;
    padding-bottom: 0;
}

/*
 * Removes blue outline from :host when it is being focused.
 * This situation is not addressed in spectrum-css because the slider element itself
 * is not intended to receive focus.
 * This is not the case with web-components. The :host will receive focus when
 * interacting with the slider via the mouse.
*/
:host(:focus) {
    outline: 0;
}

:host([editable]) {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-areas:
        'label .'
        'slider number';
}

:host([editable]) #label-container {
    grid-area: label;
}

:host([editable]) #label-container + div {
    grid-area: slider;
}

:host([editable]) sp-number-field {
    grid-area: number;

    --spectrum-stepper-width: var(
        --spectrum-slider-editable-number-field-width,
        var(--spectrum-global-dimension-size-1000)
    );
}

:host([hide-stepper]) sp-number-field {
    --spectrum-stepper-width: var(
        --spectrum-slider-editable-number-field-width,
        var(--spectrum-global-dimension-size-900)
    );
}

:host([editable][dir='ltr']) sp-number-field {
    margin-left: var(--spectrum-global-dimension-size-200);
}

:host([editable][dir='rtl']) sp-number-field {
    margin-right: var(--spectrum-global-dimension-size-200);
}

:host([editable]) output {
    border: 0;
    clip: rect(0, 0, 0, 0);
    clip-path: inset(50%);
    height: 1px;
    margin: 0 -1px -1px 0;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap;
}

:host([disabled]) {
    pointer-events: none;
}

:host([dragging]),
#track {
    touch-action: none;
    user-select: none;
}

.not-exact.ticks {
    justify-content: start;
}

:host([dir='ltr']) .not-exact .tick {
    padding-right: var(--sp-slider-tick-offset);
}

:host([dir='rtl']) .not-exact .tick {
    padding-left: var(--sp-slider-tick-offset);
}

:host([dir='ltr']) .not-exact .tick:after {
    left: auto;
    transform: translate(-50%, 0);
}

:host([dir='rtl']) .not-exact .tick:after {
    right: auto;
    transform: translate(50%, 0);
}

/*
 * The following three declarationsa required while https://github.com/adobe/spectrum-css/issues/521
 * waits to be addressed at the Spectrum CSS level.
 */

.track:before {
    background-size: var(--spectrum-slider-track-background-size) !important;
}

:host([dir='ltr']) .track:before {
    background: var(
        --spectrum-slider-m-track-color,
        var(
            --spectrum-slider-track-color,
            var(--spectrum-global-color-gray-300)
        )
    );
}

:host([dir='rtl']) .track:before {
    /* .spectrum-Slider-track:before */
    background: var(
        --spectrum-slider-m-track-color,
        var(
            --spectrum-slider-track-color-rtl,
            var(
                --spectrum-slider-track-color,
                var(--spectrum-global-color-gray-300)
            )
        )
    );
}

:host([dir='ltr']) .track:last-of-type:before {
    background-position: 100%;
}

:host([dir='rtl']) .track:first-of-type:before {
    background-position: 100%;
}

:host([dir='ltr']) .track:not(:first-of-type, :last-of-type) {
    left: var(--spectrum-slider-track-segment-position);
}

:host([dir='rtl']) .track:not(:first-of-type, :last-of-type) {
    right: var(--spectrum-slider-track-segment-position);
}

.visually-hidden {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
}

:host([label-visibility='value'][dir='ltr']) #value {
    margin-left: auto;
}

:host([label-visibility='value'][dir='rtl']) #value {
    margin-right: auto;
}

:host([label-visibility='none']) #label-container {
    padding: 0;
    margin: 0;
}

